--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
     <main>
         <h1 id="title">Calculadora de Médias</h1>
+        <br>
         <section id="data-container">
             <form id="about-container">
                 <label class="about-info" for="course">
                     <input class="about-input" id="course" placeholder="Curso" required>
                 </label>
                 <label class="about-info" for="student-name">
-                    <input class="about-input" id="student-name" placeholder="Fulano da Silva" required>
+                    <input class="about-input" id="student-name" placeholder="Insira o nome completo" required>
                 </label>
             </form>
         </section>
@@ -40,12 +41,13 @@
                         <input class="grade-input" id="task2" type="number" min="0" max="10" placeholder="Atividade 2" required>
                     </label>
                 </div>
-                <button id="btn-submit" type="submit">Submit</button>
+                <button id="btn-submit" type="submit">Calcular</button>
+                <hr>
             </form>
         </section>
         <hr>
-        <section id="result-container">
-            <h2>Exemplo de Resultado</h2>
+            <h2>Resultado</h2>
+            <section id="result-container"></section>
         </section>
     </main>
 </body>
